--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -3,8 +3,12 @@
 	min-width: 50%;
 	display: flex;
 	height: 100%;
+
 	& > div[class^="cm-theme"] {
 		flex: 1;
+	}
+	.cm-content {
+		font-weight: 600;
 	}
 }
 
@@ -14,4 +18,25 @@
 
 .cm-gutters {
 	display: inline;
+}
+// .cm-panels {
+// 	background-color: #f2c46d !important;
+// }
+// .ͼ2 {
+// 	background-color: transparent !important;
+// }
+
+.cm-scroller {
+	&::-webkit-scrollbar {
+		width: 0.3em;
+	}
+
+	&::-webkit-scrollbar-track {
+		// box-shadow: ;
+		background-color: #222326;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background: #878a8c70;
+	}
 }
