ref: able to control the with of codemirror container and make width a percetage so that when it only takes up relative to whole screen the preview wouldn't clip from view and would take up the remaining space

--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -1,9 +1,7 @@
 #editor-container {
 	color: #242424;
-	min-width: 50%;
+	width: 100px;
 	display: flex;
-	height: 100%;
-
 	& > div[class^="cm-theme"] {
 		flex: 1;
 	}
