--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -2,7 +2,7 @@
 	font-weight: 600;
 }
 .cm-editor {
-	height: 100vh;
+	height: 100%;
 }
 
 .cm-gutters {
@@ -10,18 +10,44 @@
 }
 .cm-scroller {
 	overflow-y: hidden;
-}
-#editor-container {
 	&::-webkit-scrollbar {
-		width: 0.3em;
+		height: 0.6em;
 	}
 
 	&::-webkit-scrollbar-track {
 		// box-shadow: ;
-		background-color: #222326;
+		background-color: #22232600;
 	}
 
 	&::-webkit-scrollbar-thumb {
+		background: #878a8c50;
+	}
+
+	&::-webkit-scrollbar-thumb:hover {
 		background: #878a8c70;
+	}
+	&::-webkit-scrollbar-thumb:active {
+		background: #878a8c90;
+	}
+}
+#editor-container {
+	&::-webkit-scrollbar {
+		width: 0.6em;
+	}
+
+	&::-webkit-scrollbar-track {
+		// box-shadow: ;
+		background-color: #22232600;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background: #878a8c50;
+	}
+
+	&::-webkit-scrollbar-thumb:hover {
+		background: #878a8c70;
+	}
+	&::-webkit-scrollbar-thumb:active {
+		background: #878a8c90;
 	}
 }
