fix: after filtering searchednotes the condition of mapping note items becomes true so instead of setting condition using searched notes which is bound to be filtered and or empty its state array, used original notes state instead to refer if there are notes existing

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -27,7 +27,7 @@
 
 .sidebar-active {
 	transition: all 150ms ease-in-out;
-	max-width: 384px;
+	min-width: 384px;
 	#notes-list,
 	input {
 		animation: notelistActiveAnim 150ms forwards ease-in-out;
