--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -27,7 +27,7 @@
 
 .sidebar-active {
 	transition: all 150ms ease-in-out;
-	min-width: 384px;
+	width: 384px;
 	#notes-list,
 	input {
 		animation: notelistActiveAnim 150ms forwards ease-in-out;
