ref: add contents for empty notes component for when user's first visit

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,8 @@
 	font-family: inter, Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
-input[type="search"] {
+input[type="search"],
+input[type="search"]::-webkit-search-cancel-button {
 	appearance: none;
 	-webkit-appearance: none;
 	border: none;
