--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,13 +1,11 @@
 .sidebar-inactive {
 	transition: all 130ms ease-in-out;
-	width: 0%;
+	width: 0px;
+	box-shadow: none;
 	#notes-list,
 	input {
 		display: none;
 		opacity: 0;
-	}
-	#notes-list {
-		overflow: hidden;
 	}
 }
 
@@ -28,6 +26,7 @@
 .sidebar-active {
 	transition: all 150ms ease-in-out;
 	width: 384px;
+	box-shadow: 0px 2px 5px 2px rgba($color: #000000, $alpha: 0.4);
 	#notes-list,
 	input {
 		animation: notelistActiveAnim 150ms forwards ease-in-out;
@@ -36,7 +35,6 @@
 
 #sidebar {
 	z-index: 10;
-	box-shadow: 0px 2px 5px 2px rgba($color: #000000, $alpha: 0.4);
 
 	ul {
 		&::-webkit-scrollbar {
