--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,13 +1,14 @@
 .sidebar-inactive {
 	transition: all 130ms ease-in-out;
 	width: 0%;
-	#notes-list,
-	input {
+	box-shadow: none;
+	#notes-list {
 		display: none;
 		opacity: 0;
 	}
-	#notes-list {
-		overflow: hidden;
+	#sidebar-actions {
+		border: none;
+		display: none;
 	}
 }
 
@@ -28,16 +29,21 @@
 .sidebar-active {
 	transition: all 150ms ease-in-out;
 	width: 384px;
+	box-shadow: 0px 2px 5px 2px rgba($color: #000000, $alpha: 0.4);
 	#notes-list,
 	input {
 		animation: notelistActiveAnim 150ms forwards ease-in-out;
+	}
+	#sidebar-actions {
+		display: flex;
+		button {
+			display: block;
+		}
 	}
 }
 
 #sidebar {
 	z-index: 10;
-	box-shadow: 0px 2px 5px 2px rgba($color: #000000, $alpha: 0.4);
-
 	ul {
 		&::-webkit-scrollbar {
 			width: 0.3em;
