--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -7,7 +7,7 @@
 	overflow: auto;
 	pre {
 		background-color: #ffffff15;
-		padding: 0.8em !important;
+		// padding: 0.8em !important;
 	}
 	blockquote {
 		border-left-color: #ffffff50;
