--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -1,13 +1,9 @@
 #markdown-preview {
 	color: rgb(223, 223, 223);
 	background-color: #2d2f33 !important;
-	flex: 1;
-	padding: 2em;
-	height: 100%;
-	overflow: auto;
 	pre {
 		background-color: #ffffff15;
-		// padding: 0.8em !important;
+		padding: 0.8em !important;
 	}
 	blockquote {
 		border-left-color: #ffffff50;
@@ -20,7 +16,6 @@
 	}
 
 	&::-webkit-scrollbar-track {
-		// box-shadow: ;
 		background-color: #22232600;
 	}
 
