--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -45,17 +45,17 @@
 #sidebar {
 	z-index: 10;
 	ul {
-		&::-webkit-scrollbar {
-			width: 0.3em;
-		}
+		// &::-webkit-scrollbar {
+		// 	width: 0.3em;
+		// }
 
-		&::-webkit-scrollbar-track {
-			background-color: #222326;
-		}
+		// &::-webkit-scrollbar-track {
+		// 	background-color: #222326;
+		// }
 
-		&::-webkit-scrollbar-thumb {
-			background-color: #878a8c80;
-			// background-color: #6b7ff2;
-		}
+		// &::-webkit-scrollbar-thumb {
+		// 	background-color: #878a8c80;
+		// 	// background-color: #6b7ff2;
+		// }
 	}
 }
