--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -25,6 +25,9 @@
 		color: #d9d9d9 !important;
 		border: #6b7ff2 2px solid !important;
 	}
+	td {
+		max-width: 500px;
+	}
 	th {
 		text-align: left;
 	}
