style: making preview responsive

--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -6,7 +6,8 @@
 		padding: 0.8em !important;
 	}
 	blockquote {
-		border-left-color: #ffffff50;
+		border-left-color: #6b7ff2;
+		color: #d9d9d980;
 	}
 	h1,
 	h2,
