--- a/src/App.scss
+++ b/src/App.scss
@@ -108,6 +108,15 @@ input[type="search"]::-webkit-search-cancel-button {
 		flex-direction: column;
 		gap: 6;
 	}
+	#auth-contents {
+		h2 {
+			font-size: 1.6rem;
+			margin-bottom: 0.4em;
+		}
+		p {
+			font-size: 1.2rem;
+		}
+	}
 	#welcome-text {
 		h1 {
 			font-size: 3rem;
