--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -1,6 +1,9 @@
 #markdown-preview {
 	color: rgb(223, 223, 223);
 	background-color: #2d2f33 !important;
+	p {
+		font-size: 0.9rem;
+	}
 	pre {
 		background-color: #ffffff15;
 		padding: 0.8em !important;
@@ -10,13 +13,25 @@
 		color: #d9d9d980;
 	}
 	h1 {
+		font-weight: 600 !important;
 		font-size: 1.8rem;
+	}
+	h2 {
+		font-size: 1.4rem;
+	}
+	h3 {
+		font-size: 1.2rem;
+	}
+	h4 {
+		font-size: 1.1rem;
+	}
+	h5 {
+		font-size: 1rem;
 	}
 	h1,
 	h2,
 	h3 {
 		border: none;
-		margin: 10px 0px;
 		font-weight: 800;
 	}
 	a {
@@ -39,6 +54,9 @@
 	section.footnotes,
 	li[id^="user-content-fn-"] {
 		color: #d9d9d9;
+		::before {
+			border-color: #6b7ff2;
+		}
 	}
 	section.footnotes {
 		border-top: #d9d9d980 2px solid;
