style: adding uniformed style names for border outlines

--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -1,6 +1,7 @@
 #markdown-preview {
 	color: rgb(223, 223, 223);
 	background-color: #2d2f33 !important;
+	// background-color: #222326 !important;
 	p {
 		font-size: 0.9rem;
 	}
