--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -18,10 +18,10 @@
 		font-size: 1.8rem;
 	}
 	h2 {
-		font-size: 1.4rem;
+		font-size: 1.6rem;
 	}
 	h3 {
-		font-size: 1.2rem;
+		font-size: 1.4rem;
 	}
 	h4 {
 		font-size: 1.1rem;
@@ -31,7 +31,9 @@
 	}
 	h1,
 	h2,
-	h3 {
+	h3,
+	h4,
+	h5 {
 		border: none;
 		font-weight: 800;
 	}
