--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -1,10 +1,5 @@
-.cm-content {
-	font-weight: 600;
-}
 .cm-theme {
-	border-top: 3px transparent;
-	height: 100%;
-	// max-width: 50%;
+	border-top: 3px #2d2f33;
 }
 .cm-editor {
 	padding-top: 2em;
@@ -12,4 +7,8 @@
 
 .cm-gutters {
 	display: inline;
+}
+
+.ͼ1.cm-focused {
+	outline: none;
 }
