fix: vim panel not matching color

--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -1,6 +1,3 @@
-.cm-theme {
-	border-top: 3px #2d2f33;
-}
 .cm-editor {
 	padding-top: 2em;
 }
@@ -11,4 +8,8 @@
 
 .ͼ1.cm-focused {
 	outline: none;
+}
+
+.cm-panels-bottom {
+	background-color: #2d2f33 !important;
 }
