--- a/src/assets/styles/rootAuth.scss
+++ b/src/assets/styles/rootAuth.scss
@@ -48,20 +48,20 @@
 }
 @media screen and (max-height: 830px) {
 	#root-texts {
-		padding: 1.7em 1.5em;
+		padding: 1.2em;
 	}
 	#welcome-text {
 		h1 {
-			font-size: 1.6rem;
+			font-size: 1.2rem !important;
 			margin-bottom: 5px;
 		}
 		#greet {
 			p:first-of-type {
-				font-size: 1.2rem;
+				font-size: 1rem;
 				margin-bottom: 0px;
 			}
 			:not(p:first-of-type) {
-				font-size: 1rem;
+				font-size: 0.9rem;
 				line-height: normal;
 			}
 		}
@@ -85,8 +85,8 @@
 			}
 		}
 		a {
-			font-size: 0.8rem;
 			padding: 10px 12px;
+			font-size: 0.8rem;
 		}
 	}
 	.enganyo {
