--- a/src/assets/styles/rootAuth.scss
+++ b/src/assets/styles/rootAuth.scss
@@ -1,16 +1,15 @@
-#auth {
-	@media screen and (max-width: 870px) {
-		#left-auth-contents {
-			display: none;
-		}
-		#auth-form-section {
-			width: 100%;
-			box-sizing: border-box;
-		}
-		#instruct-user-txt {
-			h1 {
-				font-size: 1.8rem;
-			}
+@media screen and (max-width: 866px) {
+	#left-auth-contents {
+		display: none;
+	}
+	#auth-form-section {
+		// padding: 0 2em;
+		width: 100%;
+		box-sizing: border-box;
+	}
+	#instruct-user-txt {
+		h1 {
+			font-size: 1.8rem;
 		}
 	}
 }
@@ -71,15 +70,15 @@
 	}
 }
 
-@media screen and (max-height: 920px) {
+@media (max-width: 1030px) {
 	#welcome-text {
 		h1 {
-			font-size: 1.6rem;
+			font-size: 1.8rem;
 			margin-bottom: 10px;
 		}
 		#greet {
 			:first-child {
-				font-size: 1.3rem;
+				font-size: 1rem;
 				margin-bottom: 0px;
 			}
 			& > :not(:first-child) {
@@ -88,11 +87,12 @@
 			}
 		}
 		a {
-			// padding: 10px 12px;
+			padding: 10px 12px !important;
 			font-size: 0.8rem;
 		}
 	}
 	.enganyo {
+		flex-direction: column;
 		h2 {
 			font-size: 1rem;
 			margin-bottom: 0.4em;
@@ -102,19 +102,11 @@
 		}
 	}
 }
-@media screen and (max-width: 1090px) {
-	.enganyo {
-		flex-direction: column;
-	}
-	#welcome-text {
-		h1 {
-			font-size: 1.8rem;
-		}
 
-		#greet {
-			:first-child {
-				font-size: 1.3rem;
-			}
+@media (max-width: 1030px) and (max-height: 860px) {
+	.enganyo {
+		&:not(div:first-of-type) {
+			display: none;
 		}
 	}
 }
