--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -27,9 +27,8 @@
 }
 
 .sidebar-active {
-  transition: all 150ms ease-in-out;
+  transition: width 150ms ease-in-out;
   width: 350px;
-  box-shadow: 0px 2px 5px 2px rgba($color: #000000, $alpha: 0.2);
   #notes-list,
   input {
     animation: notelistActiveAnim 150ms forwards ease-in-out;
@@ -39,5 +38,12 @@
     button {
       display: block;
     }
+  }
+}
+
+@media (max-width: 400px) {
+  .sidebar-active {
+    width: 100%;
+    box-shadow: none;
   }
 }
